<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="12dp"
        android:layout_margin="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                style="@style/TextDefault"
                android:text="@string/id" />

            <TextView
                android:id="@+id/txt_id"
                style="@style/TextDefault"
                tools:text="1" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/TextDefault"
                android:text="@string/name" />

            <TextView
                android:id="@+id/txt_name"
                style="@style/TextDefault"
                tools:text="Evans Shango" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/TextDefault"
                android:text="@string/email" />

            <TextView
                android:id="@+id/txt_email"
                style="@style/TextDefault"
                tools:text="probelalkhan@gmail.com" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/table"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_primary"
        android:minWidth="100dp"
        android:text="@string/logout"
        android:textColor="@color/colorTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>